# restaurant_menu

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  celerybeat-schedule.db  docker-compose.tests.yaml  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 5283d1dca27f_initial_commit.py  6eb94d7239c0_initial_database.py  9950f3fe6e16_initial_commit.py  ad667cc6c73e_initial_commit.py  e8d4b0276cd5_initial_commit.py  f0bccc0a392f_initial_commit.py  f3bc97fad19b_test.py
psql/base/1/: 1259  2619  2696  pg_internal.init
psql/base/5/: 1247  1249  1259  1259_vm  16388  16391  16393  16397  16398  16400  16402  16406  16407  16409  16416  16421  16423  2579  2606  2608  2610  2610_vm  2620  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  (+2 more)
psql/global/: 1260  2396  2671  2672  pg_control  pg_internal.init
psql/pg_stat/: pgstat.stat
psql_test/base/1/: 2840  2841  pg_internal.init
psql_test/global/: 1260  1262  pg_control  pg_internal.init
psql_test/pg_stat/: pgstat.stat
psql_test/pg_xact/: 0000
src/: cache.py  config.py  database.py  dishes_routers.py  main.py  menu_routers.py  models.py  schemas.py  submenus_routers.py
src/admin/: Menu.xlsx
src/celer/: tasks.py
src/celery/: celery.py  tasks.py
src/crud/: dish_crud.py  menu_crud.py  submenu_crud.py
src/service/: cache_service.py  service.py
tests/: conftest.py  test_dish.py  test_menu.py  test_submenu.py
webapp/migrations/: env.py
webapp/src/: database.py  main.py  models.py  schemas.py
(+47 files in other folders)
