[tool.poetry]
name = "restaurant-menu"
version = "0.1.0"
description = ""
authors = ["waterstark <waterstark97@yandex.ru>"]
readme = "README.md"
packages = [{include = "restaurant_menu"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
python-dotenv = "^1.0.0"
uvicorn = "^0.23.1"
asyncpg = "^0.28.0"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
